[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "face"
dynamic = ["version"]
description = "A command-line application framework (and CLI parser). Friendly for users, full-featured for developers."
readme = "README.md"
authors = [{ name = "Mahmoud Hashemi", email = "mahmoud@hatnote.com" }]
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
	"Topic :: Utilities",
	"Intended Audience :: Developers",
	"Topic :: Software Development :: Libraries",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"Programming Language :: Python :: 3.14",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: Implementation :: CPython",
	"Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
	"boltons>=20.0.0",
]

[project.urls]
Homepage = "https://github.com/mahmoud/face"
Documentation = "https://python-face.readthedocs.io/"

[dependency-groups]
dev = [
	"pytest>=8",
	"pytest-cov>=5",
	"tox>=4",
	"tox-uv>=1",
]

[tool.flit.sdist]
include = ["face/test/", "tox.ini", "LICENSE", "README.md", "CHANGELOG.md"]

[tool.pytest.ini_options]
testpaths = ["face/test"]
